--- a/covid-19-case-study.html
+++ b/covid-19-case-study.html
@@ -57,7 +57,22 @@
                                     <a class="dropdown-item" href="./mission&vision.html">Mission and Vision</a>
                                 </li>
                                 <li><a class="dropdown-item" href="./governing board.html">Governing Board</a></li>
-                                <li><a class="dropdown-item" href="./Partners.html">Partner</a></li>
+                                <!-- <li><a class="dropdown-item" href="./Partners.html">Partner</a></li> -->
+                                <!-- partic -->
+                                <li class="nav-item dropend">
+                                    <a class="nav-link dropdown-toggle" id="dropdown_items" href="#" role="button"
+                                        data-bs-toggle="dropdown" aria-expanded="false">
+                                        Partner
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="./International-Partners.html">International
+                                                <br>
+                                                Partners</a></li>
+                                        <li><a class="dropdown-item" href="./National Partners.html">National
+                                                Partners</a>
+                                        </li>
+                                    </ul>
+                                    <!-- partic -->
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -97,7 +112,25 @@
                                 </li>
                                 <li><a class="dropdown-item" href="./stories.html">Stories</a></li>
                                 <li><a class="dropdown-item" href="./publication.html">Publication </a></li>
-                                <li><a class="dropdown-item" href="#">Media Coverage</a></li>
+                                <!-- <li><a class="dropdown-item" href="#">Media Coverage</a></li> -->
+
+                                <!-- partic -->
+                                <li class="nav-item dropend">
+                                    <a class="nav-link dropdown-toggle" id="dropdown_items" href="#" role="button"
+                                        data-bs-toggle="dropdown" aria-expanded="false">
+                                        Media Coverage
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="./International-Partners.html">Print
+                                                Media</a></li>
+                                        <li><a class="dropdown-item" href="./National Partners.html"> Electronic
+                                                Media</a>
+                                        </li>
+                                    </ul>
+                                    <!-- partic -->
+
+
+
                                 <li><a class="dropdown-item" href="./photo gallery.html">Photo Gallery</a></li>
                             </ul>
                         </li>
@@ -151,7 +184,6 @@
         </nav>
     </section>
     <!-- nav-section-end -->
-
     <!-- covid-19-case-study-section-start -->
     <section id="nav-covid-19-case-study">
         <div class="container-fluid">
