--- a/covid-19 photos.html
+++ b/covid-19 photos.html
@@ -121,9 +121,9 @@
                                         Media Coverage
                                     </a>
                                     <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="./International-Partners.html">Print
+                                        <li><a class="dropdown-item" href="./print-media.html">Print
                                                 Media</a></li>
-                                        <li><a class="dropdown-item" href="./National Partners.html"> Electronic
+                                        <li><a class="dropdown-item" href="./electronic-media.html"> Electronic
                                                 Media</a>
                                         </li>
                                     </ul>
@@ -184,7 +184,6 @@
         </nav>
     </section>
     <!-- nav-section-end -->
-
     <!-- covid-19-photos-section-start -->
     <section id="nav-covid-19-photos">
         <div class="container-fluid">
