--- a/covid-19 leaflet.html
+++ b/covid-19 leaflet.html
@@ -191,6 +191,9 @@
         </div>
     </section>
     <!-- covid-19-leaflet-hero-section-end  -->
+     <!-- gotop-button-start -->
+  <a href="#" class="scrollup"> <i class="fa-solid fa-chevron-up" style="color: #f5f5f5;"></i></i></a>
+  <!-- gotop-button-end -->
     <!-- covid-19-leaflet-section-start -->
 
     <section id="nav-covid-19-leaflet">
